example_simple_lang/BasicPluginTest/src/main/grammar/Simple.bnf
{
  parserClass="com.example.simplelang.parser.SimpleParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Simple"
  psiImplClassSuffix="Impl"
  psiPackage="com.example.simplelang.psi"
  psiImplPackage="com.example.simplelang.psi.impl"

  elementTypeHolderClass="com.example.simplelang.psi.SimpleTypes"
  elementTypeClass="com.example.simplelang.psi.SimpleElementType"
  tokenTypeClass="com.example.simplelang.psi.SimpleTokenType"

  tokens=[
    ENTITY_KEYWORD="entity"
    REF_KEYWORD="ref"
    AS_KEYWORD="as"
    LBRACE="{"
    RBRACE="}"
    COLON=":"
    COMMENT="comment"
    IDENTIFIER="regexp:[a-zA-Z_][a-zA-Z0-9_]*"
    STRING="regexp:('([^'\\]|\\.)*'|\"([^\"\\]|\\.)*\")"
  ]
}

simpleFile ::= item_*

private item_ ::= (entityDeclaration | referenceDeclaration | COMMENT)

entityDeclaration ::= ENTITY_KEYWORD id LBRACE entityProperty* RBRACE {
  mixin="com.example.simplelang.psi.impl.SimpleEntityDeclarationMixin"
  implements="com.example.simplelang.psi.SimpleNamedElement"
  methods=[
    getName
    setName
    getPresentation
  ]
  
  pin=1
}

id ::= IDENTIFIER {
  methods=[getNameIdentifier="com.example.simplelang.psi.impl.SimpleIdLeafImpl.getNameIdentifier"]
}

entityProperty ::= IDENTIFIER COLON IDENTIFIER

referenceDeclaration ::= REF_KEYWORD IDENTIFIER AS_KEYWORD IDENTIFIER {
}
